# bevy-pong

./: Cargo.toml  README.md  go.sh  index.html
.github/workflows/: ci.yaml
src/: ai.rs  ai_score.rs  ball.rs  camera.rs  collision.rs  constants.rs  gutter.rs  main.rs  paddle.rs  player.rs  player_score.rs  position.rs  score.rs  scoreboard.rs  scored.rs  scorer.rs  shape.rs  velocity.rs
