[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from 'Bevy Tutorial: Pong' by Nolan Tait"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "cargo-pong"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/bevy-pong"
rust-version = "1.89.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
bevy = "0.16.1"

[dev-dependencies]

[features]

[profile.dev]
debug = "line-tables-only"

[profile.release]
