[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from 'Bevy Tutorial: Pong' by Nolan Tait"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "cargo-pong"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/bevy-pong"
rust-version = "1.96.1"
version = "0.0.1-SNAPSHOT"

[dependencies]
bevy = "0.19.0"
# https://docs.rs/getrandom/0.4.3/getrandom/#webassembly-support
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[dev-dependencies]

[features]

[profile.dev]
debug = "line-tables-only"

[profile.release]
